--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: gcc 활성 파일 빌드",
-            "command": "/usr/bin/gcc",
+            "command": "/usr/bin/g++",
             "args": [
                 "-g",
                 "${file}",
@@ -26,7 +26,7 @@
             "type": "shell",
             "label": "Run C/C++ source code",
             "command": "./${fileBasenameNoExtension}",
-            "optios": {
+            "options": {
                 "cwd": "${fileDirname}"
             },
             "group": "test"
