--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "git.ignoreLimitWarning": true,
     "C_Cpp.default.cppStandard": "c++17",
     "C_Cpp.default.cStandard": "c17",
-    "github.gitAuthentication": false
+    "github.gitAuthentication": false,
+    "files.associations": {
+        "map": "cpp"
+    }
 }
